<resources>
    <string name="app_name">Likeer Insta</string>
    <string name="a">t</string>
    <string name="closes">t</string>
    <string name="ap">ti</string>
    <string name="app">tik</string>
    <string name="app_">tikf</string>
    <string name="app_n">tikfo</string>
    <string name="app_na">tikfol</string>
    <string name="app_nam">tikfoll</string>
    <string name="app_names">tikfollo</string>
    <string name="app_namesz">tikfollow</string>
    <string name="app_namesx">tikfollows</string>
    <string name="text">\@username</string>
    <string name="points">00000</string>
    <string name="textview">Fetching Jokes for you</string>
    <string name="splash">Claim likes and followers</string>
    <string name="continue_as_guest">Continue As a Guest</string>
    <string name="hint">hint</string>
    <string name="enter_your_Likee_username">Login using Insta username</string>
    <string name="type_here">Type here</string>
    <string name="done">Done</string>
    <string name="claim">  Claim  </string>
    <string name="claim_them_for_free">Claim them for free</string>
    <string name="_1_follow">+1 Follow (Day:1)</string>
    <string name="_1_follow3">+1 Follow (Day:3)</string>
    <string name="_1_follow5">+1 Follow (Day:5)</string>
    <string name="_25_likes">+ 25 likes (Day:8)</string>
    <string name="_20_likes">+ 20 likes (Day:7)</string>
    <string name="_15_likes">+15 likes (Day:6)</string>
    <string name="_10_likes">+10 likes (Day:4)</string>
    <string name="_5_likes">+ 5 likes (Day:2)</string>
    <string name="claim_bonus">Claim Bonus</string>
    <string name="loading_jokes">Loading Jokes</string>
    <string name="click_to_claim_bonus">Click TO Claim Bonus</string>
    <string name="ha">ha</string>
    <string name="rate_me">Rate</string>
    <string name="jokes">jokes</string>
    <string name="proof">Proof</string>
    <string name="enter_video_link_here">Enter video link here</string>
    <string name="download">Download</string>
    <string name="accessibility_service_label" />
    <string name="accessibility_service_description" />
    <string name="floating">floating</string>
    <string name="bot">bot</string>
    <string name="todo">TODO</string>
    <string name="how_to_use">How to use</string>
    <string name="exit">Exit</string>
    <string name="robot">+200</string>
    <string name="poi">Points: </string>
    <string name="try_other_apps">Try My apps</string>
    <string name="arabic">Arabic</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="bangla">Bangla</string>
    <string name="get_back_to_task">Get Back to Task</string>
    <string name="back">back</string>
    <string name="get_tiktok_free_likes_and_folowers">Get Tiktok free likes and followers</string>
    <string name="let_your_king_learn_english_alphabet_easily">Let your kids learn english alphabet easily</string>
    <string name="earn_and_bost_your_brain_by_playing_this_game">Earn and boost your brain by playing this game</string>
    <string name="earn_money_by_playing_games">Earn money by playing games</string>
    <string name="exchange_likes_and_follow_on_likee">Exchange likes and follow on likee</string>
    <string name="get_follow_on_likee">Get follow on Likee</string>
    <string name="enjoy_most_famous_ludo_game">Enjoy most famous ludo game</string>
    <string name="get_free_folowers_on_instagram">Get free folowers on Instagram</string>
    <string name="download_video_from_facebook_insagram_tiktok_likee">Download video from Facebook, Instagram, Tiktok ,Likee</string>
    <string name="copy">copy</string>
    <string name="next">next</string>
    <string name="prev">prev</string>
    <string name="_1_follows">+1 Follow</string>
</resources>