<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".more">

    <TextView
        android:id="@+id/textViewss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_other_apps"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/tiklikes"

                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:backgroundTint="@color/background"
                android:text="@string/get_tiktok_free_likes_and_folowers"
                android:textAllCaps="false"
                android:textColor="@color/text"
                app:cornerRadius="10dp"
                app:icon="@drawable/to"
                app:iconTintMode="multiply"
                app:strokeColor="#33FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/abc"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:backgroundTint="@color/background"
                android:text="@string/let_your_king_learn_english_alphabet_easily"
                android:textAllCaps="false"
                android:textColor="@color/text"
                app:cornerRadius="10dp"
                app:icon="@drawable/abc"
                app:iconTintMode="multiply"
                app:strokeColor="#33FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/puzzle"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:backgroundTint="@color/background"
                android:text="@string/earn_and_bost_your_brain_by_playing_this_game"
                android:textAllCaps="false"
                android:textColor="@color/text"
                app:cornerRadius="10dp"
                app:icon="@drawable/puzzle"
                app:iconTintMode="multiply"
                app:strokeColor="#33FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/word"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:backgroundTint="@color/background"
                android:text="@string/earn_money_by_playing_games"
                android:textAllCaps="false"
                android:textColor="@color/text"
                app:cornerRadius="10dp"
                app:icon="@drawable/word"
                app:iconTintMode="multiply"
                app:strokeColor="#33FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/tikfollow"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:backgroundTint="@color/background"
                android:text="@string/exchange_likes_and_follow_on_likee"
                android:textAllCaps="false"
                android:textColor="@color/text"
                app:cornerRadius="10dp"
                app:icon="@drawable/tikfollow"
                app:iconTintMode="multiply"
                app:strokeColor="#33FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/likee"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:backgroundTint="@color/background"
                android:text="@string/get_follow_on_likee"
                android:textAllCaps="false"
                android:textColor="@color/text"
                app:cornerRadius="10dp"
                app:icon="@drawable/likee"
                app:iconSize="40dp"
                app:iconTintMode="multiply"
                app:strokeColor="#33FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/ludo"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:backgroundTint="@color/background"
                android:text="@string/enjoy_most_famous_ludo_game"
                android:textAllCaps="false"
                android:textColor="@color/text"
                app:cornerRadius="10dp"
                app:icon="@drawable/ludo"
                app:iconTintMode="multiply"
                app:strokeColor="#33FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/instafollow"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:backgroundTint="@color/background"
                android:text="@string/get_free_folowers_on_instagram"
                android:textAllCaps="false"
                android:textColor="@color/text"
                app:cornerRadius="10dp"
                app:icon="@drawable/insta"
                app:iconTintMode="multiply"
                app:strokeColor="#33FFFFFF"
                app:strokeWidth="2dp" />


            <Button
                android:id="@+id/download"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:backgroundTint="@color/background"
                android:text="@string/download_video_from_facebook_insagram_tiktok_likee"
                android:textAllCaps="false"
                android:textColor="@color/text"
                app:cornerRadius="10dp"
                app:icon="@drawable/download"
                app:iconTintMode="multiply"
                app:strokeColor="#1AFFFFFF"
                app:strokeWidth="2dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>