<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF"
    tools:context=".doTask">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ap"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/task" />

    <Button
        android:id="@+id/back"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="325dp"
        android:layout_height="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/gits" />

    <TextView
        android:id="@+id/taskpoint"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textAlignment="center"
        android:textColor="#00FEFE"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.274" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-9422110628550448/1694359733"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.765" />

    <Button
        android:id="@+id/rates"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/rate_me"
        android:textAllCaps="false"
        android:textColor="#00FDFD"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.94"
        app:strokeColor="#01F2F2"
        app:strokeWidth="2.5sp" />

    <Button
        android:id="@+id/jokes"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/jokes"
        android:textAllCaps="false"
        android:textColor="#00FDFD"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.94"
        app:strokeColor="#01F2F2"
        app:strokeWidth="2.5sp" />

    <Button
        android:id="@+id/follow"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/_1_follow"
        android:textAllCaps="false"
        android:textColor="#00FDFD"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.604"
        app:strokeColor="#01F2F2"
        app:strokeWidth="2.5sp" />

    <Button
        android:id="@+id/reward200"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/robot"
        android:textAllCaps="false"
        android:textColor="#00FDFD"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.603"
        app:strokeColor="#01F2F2"
        app:strokeWidth="2.5sp" />

    <Button
        android:id="@+id/proof2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/proof"
        android:textAllCaps="false"
        android:textColor="#00FDFD"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.94"
        app:strokeColor="#01F2F2"
        app:strokeWidth="2.5sp" />

    <Button
        android:id="@+id/proof"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/how_to_use"
        android:textAllCaps="false"
        android:textColor="#00FDFD"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.04"
        app:strokeColor="#01F2F2"
        app:strokeWidth="2.5sp" />

</androidx.constraintlayout.widget.ConstraintLayout>